fix: DdA logo on mobile cover

--- a/src/components/Slides/Cover/styles.module.scss
+++ b/src/components/Slides/Cover/styles.module.scss
@@ -31,6 +31,10 @@
   margin-left: auto;
   overflow: visible;
   width: 9.6rem;
+
+  @include mobile {
+    float: right;
+  }
 }
 
 .wrapper {
